# NearestNeighborsGPU

./: CMakeLists.txt  README.md  clutil.hpp  main.cpp  nn_parallel.hpp  nn_serial.hpp  nn_util.hpp  perf_timer.hpp  sort.hpp
kernels/: boxes-local.cl  boxes.cl  sort2.cl
